@@ -1,5 +1,10 @@
 package studio.one.platform.ai.web.controller;
 
+import java.util.List;
+import java.util.Map;
+
+import javax.validation.Valid;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.validation.annotation.Validated;
@@ -7,6 +12,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
 import studio.one.platform.ai.core.rag.RagIndexRequest;
 import studio.one.platform.ai.core.rag.RagSearchRequest;
 import studio.one.platform.ai.core.rag.RagSearchResult;
@@ -15,14 +21,10 @@ import studio.one.platform.ai.web.dto.IndexRequest;
 import studio.one.platform.ai.web.dto.SearchRequest;
 import studio.one.platform.ai.web.dto.SearchResponse;
 import studio.one.platform.ai.web.dto.SearchResult;
+import studio.one.platform.constant.PropertyKeys;
 
-import javax.validation.Valid;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-@RestController
-@RequestMapping("/api")
+@RestController 
+@RequestMapping("${" + PropertyKeys.AI.Endpoints.BASE_PATH + ":/api/ai}/rag")
 @Validated
 public class RagController {
 
@@ -50,7 +52,7 @@ public class RagController {
                         result.content(),
                         result.metadata(),
                         result.score()))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(new SearchResponse(payload));
     }
 }
